[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/Scenes/General/DividedContainer/DividedContainer.gd" type="Script" id=1]
[ext_resource path="res://src/Scenes/General/DividedContainer/DividedContainerHighlighter.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/Scenes/General/StdScrollContainer.gd" type="Script" id=3]
[ext_resource path="res://src/Ressources/Themes/DividedContainerMovingHighlighter.tres" type="StyleBox" id=4]

[node name="DividedContainer" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="MovingHighlighter" parent="." instance=ExtResource( 2 )]
size_flags_vertical = 0
custom_styles/panel = ExtResource( 4 )

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 3 )

[node name="Sections" type="HBoxContainer" parent="ScrollContainer"]
margin_right = 1120.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="gui_input" from="ScrollContainer/Sections" to="." method="_on_Sections_gui_input"]
